Env variables added

--- a/views/partials/testchart_partial.handlebars
+++ b/views/partials/testchart_partial.handlebars
@@ -27,7 +27,7 @@ var {{ chart_id }}drawChart = new Chart(ctx, {
             fill: false,
             type: 'line'
         }, {
-            label: 'Volume',
+            label: 'Volume Traded/day',
             yAxisID: 'rightAxis',
             borderColor: '#ffce56',
             borderWidth: 2,
